--- a/projects/demo/src/app/wizard/wizard-custom-buttons.demo.html
+++ b/projects/demo/src/app/wizard/wizard-custom-buttons.demo.html
@@ -21,7 +21,7 @@
     <ng-template clrPageNavTitle>Default buttons</ng-template>
     <!-- optional -->
 
-    <p class="content-for-page-1">
+    <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae minima inventore quia, officiis rem id explicabo
       incidunt, illum deleniti qui doloremque voluptatem, saepe tenetur quas! Quaerat explicabo expedita placeat vero.
     </p>
@@ -45,7 +45,7 @@
     <ng-template clrPageNavTitle>Custom buttons</ng-template>
     <!-- optional -->
 
-    <p class="content-for-page-2">
+    <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae minima inventore quia, officiis rem id explicabo
       incidunt, illum deleniti qui doloremque voluptatem, saepe tenetur quas! Quaerat explicabo expedita placeat vero.
     </p>
@@ -79,7 +79,7 @@
     <ng-template clrPageNavTitle>Default buttons</ng-template>
     <!-- optional -->
 
-    <p class="content-for-page-3">
+    <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae minima inventore quia, officiis rem id explicabo
       incidunt, illum deleniti qui doloremque voluptatem, saepe tenetur quas! Quaerat explicabo expedita placeat vero.
     </p>
@@ -112,7 +112,7 @@
       <button type="submit" class="btn btn-danger" (click)="handleDangerClick()">Click here if you are sure</button>
     </p>
 
-    <p class="content-for-page-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
 
     <ng-template clrPageButtons>
       <clr-wizard-button [type]="'cancel'">Page Override</clr-wizard-button>
