--- a/projects/demo/src/app/wizard/wizard-inline.demo.html
+++ b/projects/demo/src/app/wizard/wizard-inline.demo.html
@@ -32,7 +32,7 @@
     <!-- optional -->
 
     <p>Content for page 1</p>
-    <p class="content-for-page-1">
+    <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae minima inventore quia, officiis rem id explicabo
       incidunt, illum deleniti qui doloremque voluptatem, saepe tenetur quas! Quaerat explicabo expedita placeat vero.
     </p>
@@ -55,7 +55,7 @@
     <!-- mandatory -->
 
     <p>Content for page 2</p>
-    <p class="content-for-page-2">
+    <p>
       Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae minima inventore quia, officiis rem id explicabo
       incidunt, illum deleniti qui doloremque voluptatem, saepe tenetur quas! Quaerat explicabo expedita placeat vero.
     </p>
@@ -65,6 +65,6 @@
     <ng-template clrPageTitle>Page 3</ng-template>
     <!-- mandatory -->
 
-    <p class="content-for-page-3">Content for page 3</p>
+    <p>Content for page 3</p>
   </clr-wizard-page>
 </clr-wizard>
