--- a/projects/demo/src/app/wizard/wizard-step-error.demo.html
+++ b/projects/demo/src/app/wizard/wizard-step-error.demo.html
@@ -19,7 +19,7 @@
     <!-- mandatory -->
     <ng-template clrPageNavTitle>Step 1</ng-template>
     <!-- optional -->
-    <p class="content-for-page-1">Content for step 1</p>
+    <p>Content for step 1</p>
     <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque eu odio nisi. Vestibulum dignissim eget massa sit
       amet feugiat. Quisque auctor mattis quam eu suscipit. Morbi ipsum risus, feugiat vitae sem at, tincidunt elementum
@@ -43,7 +43,7 @@
     <!-- mandatory -->
     <ng-template clrPageNavTitle>Step 2</ng-template>
     <!-- optional -->
-    <p class="content-for-page-2">Content for step 2</p>
+    <p>Content for step 2</p>
   </clr-wizard-page>
 
   <clr-wizard-page>
@@ -51,6 +51,6 @@
     <!-- mandatory -->
     <ng-template clrPageNavTitle>Step 3</ng-template>
     <!-- optional -->
-    <p class="content-for-page-3">Content for step 3</p>
+    <p>Content for step 3</p>
   </clr-wizard-page>
 </clr-wizard>
