--- a/projects/angular/src/wizard/_variables.wizard.scss
+++ b/projects/angular/src/wizard/_variables.wizard.scss
@@ -9,6 +9,7 @@
 @use '@cds/core/tokens/tokens.scss';
 
 $clr-wizard-default-space: var(--clr-wizard-default-space) !default;
+$clr-wizard-footer-vertical-space: var(--clr-wizard-footer-vertical-space) !default;
 
 $clr-wizard-main-bgcolor: var(--clr-wizard-main-bgcolor) !default;
 $clr-wizard-main-text-color: var(--clr-wizard-main-text-color) !default;
