--- a/projects/angular/src/wizard/_wizard.clarity.scss
+++ b/projects/angular/src/wizard/_wizard.clarity.scss
@@ -73,7 +73,8 @@
       height: wizard-variables.$clr-wizard-footer-height;
       min-height: wizard-variables.$clr-wizard-footer-height;
       max-height: wizard-variables.$clr-wizard-footer-height;
-      padding: 0 wizard-variables.$clr-wizard-default-space wizard-variables.$clr-wizard-default-space;
+      padding: wizard-variables.$clr-wizard-footer-vertical-space wizard-variables.$clr-wizard-default-space;
+      border-top: var(--clr-global-borderwidth) solid wizard-variables.$clr-wizard-stepnav-border-color;
     }
 
     .clr-wizard-btn {
