--- a/projects/angular/src/emphasis/alert/_variables.alert.scss
+++ b/projects/angular/src/emphasis/alert/_variables.alert.scss
@@ -7,11 +7,12 @@
 @use '../../utils/variables/variables';
 @use '../../layout/density' as density;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../utils/mixins';
 
 // TYPOGRAPHIC STYLES
 // Usage: ./_alert.clarity.scss
 $clr-alert-font-size: #{density.$clr-base-typography-font-size-inline} !default;
-$clr-alert-letter-spacing: #{tokens.$cds-alias-typography-secondary-letter-spacing} !default;
+$clr-alert-letter-spacing: #{mixins.baselinePx(-0.1)} !default;
 
 // Dimensions & Layout
 // Usage: ./_alert.clarity.scss
