--- a/projects/angular/src/data/tree-view/_tree-view.clarity.scss
+++ b/projects/angular/src/data/tree-view/_tree-view.clarity.scss
@@ -57,6 +57,8 @@
     display: flex;
     align-items: center;
 
+    @include mixins.generate-typography-token('SECONDARY-13-RG-CPT');
+
     & > .clr-treenode-checkbox.clr-checkbox-wrapper {
       width: 100%;
 
