feat(checkbox, radio, toggle): update positioning

--- a/projects/angular/src/forms/styles/_checkbox.clarity.scss
+++ b/projects/angular/src/forms/styles/_checkbox.clarity.scss
@@ -26,7 +26,7 @@
     @include forms-mixins.form-flatten-validate-text();
     position: relative;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
 
     .clr-control-label {
       @include forms-mixins.checkbox-radio-label-styles(
