fix: change min-height to height

--- a/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
+++ b/projects/angular/src/popover/dropdown/_menu-mixins.clarity.scss
@@ -53,7 +53,7 @@
   display: flex;
   gap: density.$clr-base-gap-xs;
   align-items: center;
-  min-height: density.$clr-base-row-height-s;
+  height: density.$clr-base-row-height-s;
   margin: 0;
   width: 100%;
   text-transform: none;
