--- a/projects/demo/src/app/stack-view/stack-view-angular-modal-edit.html
+++ b/projects/demo/src/app/stack-view/stack-view-angular-modal-edit.html
@@ -9,7 +9,7 @@
   <clr-stack-view>
     <clr-stack-header>
       Modal editor
-      <button class="stack-action btn btn-sm btn-link" (click)="editModal = true" type="button">Edit</button>
+      <button class="stack-action btn btn-link" (click)="editModal = true" type="button">Edit</button>
     </clr-stack-header>
 
     <clr-stack-block *ngFor="let block of blocks">
