--- a/projects/demo/src/app/stack-view/stack-view-static.html
+++ b/projects/demo/src/app/stack-view/stack-view-static.html
@@ -9,7 +9,7 @@
   <div class="stack-header">
     <h4 class="stack-title">Static stack view</h4>
     <span class="stack-actions">
-      <button class="stack-action btn btn-sm btn-link" type="button">Edit</button>
+      <button class="stack-action btn btn-link" type="button">Edit</button>
     </span>
   </div>
   <div class="stack-view">
