--- a/projects/angular/src/data/tree-view/_properties.tree-view.scss
+++ b/projects/angular/src/data/tree-view/_properties.tree-view.scss
@@ -7,11 +7,12 @@
 @use '../../utils/mixins';
 @use 'variables.tree-view' as tree-view-variables;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density' as density;
 
 @include mixins.exports('tree.properties') {
   :root [cds-theme] {
     // Usage: ../data/tree-view/_tree-view.clarity.scss
-    --clr-tree-border-radius: #{tokens.$cds-alias-object-border-radius-100};
+    --clr-tree-border-radius: #{density.$clr-base-border-radius-s};
 
     // @deprecated in v17 in favor of clr-tree-node-content-bg-hover-color
     --clr-tree-link-hover-color: #{tokens.$cds-alias-object-interaction-background-hover};
