--- a/projects/angular/src/data/tree-view/_tree-view.clarity.scss
+++ b/projects/angular/src/data/tree-view/_tree-view.clarity.scss
@@ -6,7 +6,6 @@
  */
 @use 'sass:meta';
 @use '../../utils/mixins';
-@use '../../layout/density' as density;
 @use 'variables.tree-view' as tree-view-variables;
 @use '@cds/core/tokens/tokens.scss';
 
@@ -63,12 +62,13 @@
       width: 100%;
 
       &:first-child {
-        margin-left: density.$clr-base-icon-size-2xl;
+        margin-left: tree-view-variables.$clr-tree-node-touch-target;
       }
 
       .clr-control-label {
         width: 100%;
-        padding: density.$clr-base-layout-space-xs density.$clr-base-layout-space-xs density.$clr-base-layout-space-xs 0;
+        padding: tree-view-variables.$clr-tree-node-content-padding;
+        padding-left: 0;
       }
     }
 
@@ -89,23 +89,23 @@
     flex: 1 1 auto;
     display: flex;
     align-items: center;
-    gap: density.$clr-base-horizontal-offset-m;
+    gap: tree-view-variables.$clr-tree-node-content-gap;
     color: tree-view-variables.$clr-tree-node-content-text-only-color;
     background-color: tree-view-variables.$clr-tree-node-content-bg-color;
 
     //Dimensions
     &:first-child {
-      margin-left: density.$clr-base-icon-size-2xl;
+      margin-left: tree-view-variables.$clr-tree-node-touch-target;
     }
 
-    padding: density.$clr-base-layout-space-xs;
+    padding: tree-view-variables.$clr-tree-node-content-padding;
 
     //Others
-    border-radius: density.$clr-base-border-radius-s;
+    border-radius: tree-view-variables.$clr-tree-border-radius;
 
     cds-icon,
     clr-icon {
-      @include mixins.min-equilateral(density.$clr-base-icon-size-s);
+      @include mixins.min-equilateral(tree-view-variables.$clr-tree-caret-size);
       color: tree-view-variables.$clr-tree-node-content-text-only-color;
       vertical-align: middle;
     }
@@ -120,7 +120,7 @@
 
   .clr-treenode-content:has(.clr-treenode-link),
   .clr-treenode-checkbox {
-    border-radius: density.$clr-base-border-radius-s;
+    border-radius: tree-view-variables.$clr-tree-border-radius;
     background-color: tree-view-variables.$clr-tree-node-content-bg-color;
 
     &:hover {
@@ -133,25 +133,7 @@
   }
 
   .clr-treenode-checkbox input[type='checkbox'] {
-    margin-left: density.$clr-base-horizontal-offset-m;
-
-    // padding: 0;
-    // @include mixins.min-equilateral(density.$clr-base-icon-size-2xl);
-    // padding-top: density.$clr-base-vertical-offset-m;
-    // padding-left: density.$clr-base-horizontal-offset-m;
-
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-
-    // &::after {
-    //   left: unset;
-    //   transform: translate(0, -1.5px) rotate(-45deg);
-    // }
-    // &:indeterminate:after {
-    //   // left: unset;
-    //   transform: translate(0, -1.5px);
-    // }
+    margin-left: tree-view-variables.$clr-tree-node-content-gap;
   }
 
   .clr-treenode-content .clr-treenode-link,
@@ -189,8 +171,7 @@
       left: 0;
       top: 0;
       transform: translateX(-100%);
-      width: density.$clr-base-icon-size-2xl;
-      height: density.$clr-base-icon-size-2xl;
+      @include mixins.equilateral(tree-view-variables.$clr-tree-node-touch-target);
     }
   }
 
@@ -208,12 +189,12 @@
 
   .clr-treenode-caret {
     //Display
-    flex: 0 0 density.$clr-base-icon-size-2xl;
+    flex: 0 0 tree-view-variables.$clr-tree-node-touch-target;
 
     //Dimensions
     margin: 0;
     padding: 0;
-    @include mixins.min-equilateral(density.$clr-base-icon-size-2xl);
+    @include mixins.min-equilateral(tree-view-variables.$clr-tree-node-touch-target);
 
     //Others
     background: none;
@@ -232,7 +213,7 @@
 
   .clr-treenode-caret-icon {
     //Dimensions
-    @include mixins.equilateral(density.$clr-base-icon-size-s);
+    @include mixins.equilateral(tree-view-variables.$clr-tree-caret-size);
 
     //Others
     vertical-align: middle;
@@ -240,13 +221,13 @@
 
   .clr-treenode-spinner-container {
     //Dimensions
-    @include mixins.min-equilateral(density.$clr-base-icon-size-2xl);
-    padding: density.$clr-base-layout-space-xs;
+    @include mixins.min-equilateral(tree-view-variables.$clr-tree-node-touch-target);
+    padding: tree-view-variables.$clr-tree-node-content-padding;
   }
 
   .clr-treenode-spinner {
     //Dimensions
-    @include mixins.min-equilateral(density.$clr-base-icon-size-s);
+    @include mixins.min-equilateral(tree-view-variables.$clr-tree-spinner-size);
   }
 
   .clr-treenode-children {
