--- a/projects/angular/src/data/tree-view/_variables.tree-view.scss
+++ b/projects/angular/src/data/tree-view/_variables.tree-view.scss
@@ -6,22 +6,18 @@
  */
 
 @use '@cds/core/tokens/tokens.scss';
+@use '../../layout/density' as density;
 
-// Usage: ../data/tree-view/_tree-vioew.clarity.scss
+// Usage: ../data/tree-view/_tree-view.clarity.scss
 $clr-tree-border-radius: var(--clr-tree-border-radius) !default;
-$clr-tree-caret-size: #{tokens.$cds-global-space-7} !default;
-$clr-tree-spinner-size: $clr-tree-caret-size !default;
-$clr-tree-node-touch-target: #{tokens.$cds-global-space-10} !default;
-$clr-tree-node-children-margin: $clr-tree-node-touch-target !default;
-$clr-tree-node-content-icon-margin-right: #{tokens.$cds-global-space-5} !default;
-$clr-tree-checkbox-padding-top: 0 !default;
-$clr-tree-checkbox-padding-left: #{tokens.$cds-global-space-5} !default;
 
-// @deprecated in v17 in favor of $clr-tree-node-content-padding. Will be removed in v18.
-$clr-tree-node-link-padding-left: #{tokens.$cds-global-space-5} !default;
-// after removal of $clr-tree-node-link-padding-left set to only #{tokens.$cds-global-space-5}
-$clr-tree-node-content-padding: #{tokens.$cds-global-space-5} #{tokens.$cds-global-space-5} #{tokens.$cds-global-space-5}
-  #{$clr-tree-node-link-padding-left} !default;
+$clr-tree-caret-size: #{density.$clr-base-icon-size-s} !default;
+$clr-tree-spinner-size: #{density.$clr-base-icon-size-s} !default;
+$clr-tree-node-touch-target: #{density.$clr-base-icon-size-2xl} !default;
+$clr-tree-node-children-margin: $clr-tree-node-touch-target !default;
+
+$clr-tree-node-content-gap: #{density.$clr-base-layout-space-xs} !default;
+$clr-tree-node-content-padding: #{density.$clr-base-layout-space-xs} !default;
 
 // @deprecated  in v17 in favor of clr-tree-node-content-bg-hover-color
 $clr-tree-link-hover-color: var(--clr-tree-node-content-bg-hover-color) !default;
